--- a/Scr/CustomSwitch/CustomSwitch.xaml
+++ b/Scr/CustomSwitch/CustomSwitch.xaml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentView x:Class="CustomSwitch.CustomSwitch"
+<ContentView x:Class="IeuanWalker.Maui.Switch.CustomSwitch"
              xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
     <ContentView.GestureRecognizers>
