--- a/Demo/App/Examples/Other2Switch.xaml
+++ b/Demo/App/Examples/Other2Switch.xaml
@@ -22,23 +22,26 @@
             <RoundRectangle CornerRadius="18" />
         </switch:CustomSwitch.KnobStrokeShape>
         <switch:CustomSwitch.BackgroundContent>
-            <StackLayout Orientation="Horizontal">
-                <Label FontAttributes="Bold"
-                       HorizontalOptions="FillAndExpand"
-                       HorizontalTextAlignment="Center"
+            <Grid ColumnDefinitions="40,40"
+                  HeightRequest="40"
+                  WidthRequest="80">
+                <Label Grid.Column="0"
+                       FontAttributes="Bold"
+                       FontAutoScalingEnabled="False"
+                       FontSize="12"
+                       HorizontalOptions="Center"
                        Text="ON"
                        TextColor="DarkGray"
-                       VerticalOptions="FillAndExpand"
                        VerticalTextAlignment="Center" />
-                <Label FontAttributes="Bold"
+                <Label Grid.Column="1"
+                       FontAttributes="Bold"
+                       FontAutoScalingEnabled="False"
                        FontSize="12"
-                       HorizontalOptions="FillAndExpand"
-                       HorizontalTextAlignment="Center"
+                       HorizontalOptions="Center"
                        Text="OFF"
                        TextColor="DarkGray"
-                       VerticalOptions="FillAndExpand"
                        VerticalTextAlignment="Center" />
-            </StackLayout>
+            </Grid>
         </switch:CustomSwitch.BackgroundContent>
     </switch:CustomSwitch>
 </ContentView>
