--- a/Demo/App/Examples/Other4Switch.xaml
+++ b/Demo/App/Examples/Other4Switch.xaml
@@ -21,57 +21,55 @@
             <RoundRectangle CornerRadius="30" />
         </switch:CustomSwitch.KnobStrokeShape>
         <switch:CustomSwitch.BackgroundContent>
-            <FlexLayout JustifyContent="SpaceEvenly">
-                <Label FontAttributes="Bold"
+            <Grid ColumnDefinitions="60,60"
+                  HeightRequest="50"
+                  WidthRequest="120">
+                <Label Grid.Column="0"
+                       FontAttributes="Bold"
+                       FontAutoScalingEnabled="False"
                        FontFamily="FASolid900"
                        FontSize="Large"
-                       HorizontalOptions="FillAndExpand"
                        HorizontalTextAlignment="Center"
                        Text="&#xf00d;"
                        TextColor="DarkGray"
-                       VerticalOptions="FillAndExpand"
-                       VerticalTextAlignment="Center"
-                       WidthRequest="60" />
-                <Label FontAttributes="Bold"
+                       VerticalTextAlignment="Center" />
+                <Label Grid.Column="1"
+                       FontAttributes="Bold"
+                       FontAutoScalingEnabled="False"
                        FontFamily="FASolid900"
                        FontSize="Large"
-                       HorizontalOptions="FillAndExpand"
                        HorizontalTextAlignment="Center"
                        Text="&#xf00c;"
                        TextColor="DarkGray"
-                       VerticalOptions="FillAndExpand"
-                       VerticalTextAlignment="Center"
-                       WidthRequest="60" />
-            </FlexLayout>
+                       VerticalTextAlignment="Center" />
+            </Grid>
         </switch:CustomSwitch.BackgroundContent>
 
         <switch:CustomSwitch.KnobContent>
-            <StackLayout Orientation="Horizontal">
-                <FlexLayout x:Name="Flex"
-                            JustifyContent="SpaceEvenly"
-                            WidthRequest="120">
-                    <Label FontAttributes="Bold"
-                           FontFamily="FASolid900"
-                           FontSize="Large"
-                           HorizontalOptions="FillAndExpand"
-                           HorizontalTextAlignment="Center"
-                           Text="&#xf00d;"
-                           TextColor="#dd2424"
-                           VerticalOptions="FillAndExpand"
-                           VerticalTextAlignment="Center"
-                           WidthRequest="60" />
-                    <Label FontAttributes="Bold"
-                           FontFamily="FASolid900"
-                           FontSize="Large"
-                           HorizontalOptions="FillAndExpand"
-                           HorizontalTextAlignment="Center"
-                           Text="&#xf00c;"
-                           TextColor="#46d744"
-                           VerticalOptions="FillAndExpand"
-                           VerticalTextAlignment="Center"
-                           WidthRequest="60" />
-                </FlexLayout>
-            </StackLayout>
+            <Grid x:Name="KnobContent"
+                  Margin="60,0,0,0"
+                  ColumnDefinitions="60,60"
+                  HeightRequest="50"
+                  WidthRequest="120">
+                <Label Grid.Column="0"
+                       FontAttributes="Bold"
+                       FontAutoScalingEnabled="False"
+                       FontFamily="FASolid900"
+                       FontSize="Large"
+                       HorizontalTextAlignment="Center"
+                       Text="&#xf00d;"
+                       TextColor="#dd2424"
+                       VerticalTextAlignment="Center" />
+                <Label Grid.Column="1"
+                       FontAttributes="Bold"
+                       FontAutoScalingEnabled="False"
+                       FontFamily="FASolid900"
+                       FontSize="Large"
+                       HorizontalTextAlignment="Center"
+                       Text="&#xf00c;"
+                       TextColor="#46d744"
+                       VerticalTextAlignment="Center" />
+            </Grid>
         </switch:CustomSwitch.KnobContent>
     </switch:CustomSwitch>
 </ContentView>
