working android accessiblity

--- a/Demo/App/MainPage.xaml
+++ b/Demo/App/MainPage.xaml
@@ -44,6 +44,9 @@
                                         IsToggled="{Binding EnableCommands}" />
                 </Grid>
 
+                <Button Text="Test" />
+                <Switch />
+
                 <Label Style="{StaticResource sectionHeading}" Text="iOS" />
                 <examples:IosSwitch Toggled="Switch_OnToggled" ToggledCommand="{Binding ToggledCommand}" />
                 <examples:IosSwitch IsToggled="True"
