--- a/Scr/Switch/CustomSwitch.xaml
+++ b/Scr/Switch/CustomSwitch.xaml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<view:SwitchView x:Class="CustomSwitch.CustomSwitch"
+<view:SwitchView x:Class="IeuanWalker.Maui.Switch.CustomSwitch"
                  xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
                  xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                 xmlns:view="clr-namespace:CustomSwitch.Handler">
+                 xmlns:view="clr-namespace:IeuanWalker.Maui.Switch">
     <view:SwitchView.GestureRecognizers>
         <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" />
     </view:SwitchView.GestureRecognizers>
     <view:SwitchView.Content>
-        <Grid>
+        <Grid AutomationProperties.ExcludedWithChildren="True" AutomationProperties.IsInAccessibleTree="False">
             <Border x:Name="BackgroundFrame"
                     Padding="0"
                     Background="{Binding Background, Source={RelativeSource AncestorType={x:Type ContentView}}}"
