--- a/Scr/Switch/CustomSwitch.xaml
+++ b/Scr/Switch/CustomSwitch.xaml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentView x:Class="IeuanWalker.Maui.Switch.CustomSwitch"
-             xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
-    <ContentView.GestureRecognizers>
+<view:SwitchView x:Class="IeuanWalker.Maui.Switch.CustomSwitch"
+                 xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+                 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                 xmlns:view="clr-namespace:IeuanWalker.Maui.Switch">
+    <view:SwitchView.GestureRecognizers>
         <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" />
-    </ContentView.GestureRecognizers>
-    <ContentView.Content>
-        <Grid>
+    </view:SwitchView.GestureRecognizers>
+    <view:SwitchView.Content>
+        <Grid AutomationProperties.ExcludedWithChildren="True" AutomationProperties.IsInAccessibleTree="False">
             <Border x:Name="BackgroundFrame"
                     Padding="0"
                     Background="{Binding Background, Source={RelativeSource AncestorType={x:Type ContentView}}}"
@@ -38,5 +39,5 @@
                     VerticalOptions="Center"
                     WidthRequest="{Binding KnobWidth, Source={RelativeSource AncestorType={x:Type ContentView}}}" />
         </Grid>
-    </ContentView.Content>
-</ContentView>
+    </view:SwitchView.Content>
+</view:SwitchView>
