--- a/Demo/App/Controls/CustomSwitchExamples/AndroidSwitch.xaml
+++ b/Demo/App/Controls/CustomSwitchExamples/AndroidSwitch.xaml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
 
-<ContentView x:Class="App.Examples.AndroidSwitch"
+<ContentView x:Class="App.Controls.CustomSwitchExamples.AndroidSwitch"
              xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:switch="clr-namespace:IeuanWalker.Maui.Switch;assembly=IeuanWalker.Maui.Switch">
