--- a/Demo/App/Controls/CustomSwitchExamples/IosSwitch.xaml
+++ b/Demo/App/Controls/CustomSwitchExamples/IosSwitch.xaml
@@ -1,36 +1,35 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
-<ContentView x:Class="App.Examples.Other3Switch"
+<ContentView x:Class="App.Controls.CustomSwitchExamples.IosSwitch"
              xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:switch="clr-namespace:IeuanWalker.Maui.Switch;assembly=IeuanWalker.Maui.Switch">
-    <switch:CustomSwitch BackgroundColor="White"
-                         HeightRequest="35"
-                         HorizontalKnobMargin="-1"
+    <switch:CustomSwitch HeightRequest="40"
+                         HorizontalKnobMargin="1"
                          IsToggled="{Binding IsToggled, Source={RelativeSource AncestorType={x:Type ContentView}}}"
                          KnobColor="White"
-                         KnobHeight="40"
+                         KnobHeight="36"
                          KnobLimit="Boundary"
-                         KnobWidth="42"
+                         KnobWidth="36"
                          SwitchPanUpdate="CustomSwitch_SwitchPanUpdate"
                          Toggled="CustomSwitch_Toggled"
                          ToggledCommand="{Binding ToggledCommand, Source={RelativeSource AncestorType={x:Type ContentView}}}"
-                         WidthRequest="90">
+                         WidthRequest="70">
         <switch:CustomSwitch.StrokeShape>
             <RoundRectangle CornerRadius="20" />
         </switch:CustomSwitch.StrokeShape>
         <switch:CustomSwitch.KnobStrokeShape>
-            <RoundRectangle CornerRadius="20" />
+            <RoundRectangle CornerRadius="18" />
         </switch:CustomSwitch.KnobStrokeShape>
         <switch:CustomSwitch.BackgroundContent>
-            <Grid ColumnDefinitions="45,45"
-                  HeightRequest="35"
-                  WidthRequest="90">
+            <Grid ColumnDefinitions="35,35"
+                  HeightRequest="40"
+                  WidthRequest="70">
                 <Label Grid.Column="0"
                        FontAttributes="Bold"
                        FontAutoScalingEnabled="False"
                        FontSize="12"
                        HorizontalOptions="Center"
-                       Text="ON"
+                       Text=" |"
                        TextColor="White"
                        VerticalTextAlignment="Center" />
                 <Label Grid.Column="1"
@@ -38,8 +37,8 @@
                        FontAutoScalingEnabled="False"
                        FontSize="12"
                        HorizontalOptions="Center"
-                       Text="OFF"
-                       TextColor="White"
+                       Text="〇"
+                       TextColor="#BBBBBB"
                        VerticalTextAlignment="Center" />
             </Grid>
         </switch:CustomSwitch.BackgroundContent>
