--- a/Demo/App/Controls/CustomSwitchExamples/Other3Switch.xaml
+++ b/Demo/App/Controls/CustomSwitchExamples/Other3Switch.xaml
@@ -1,37 +1,37 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
-<ContentView x:Class="App.Examples.Other2Switch"
+<ContentView x:Class="App.Controls.CustomSwitchExamples.Other3Switch"
              xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:switch="clr-namespace:IeuanWalker.Maui.Switch;assembly=IeuanWalker.Maui.Switch">
     <switch:CustomSwitch BackgroundColor="White"
-                         HeightRequest="40"
-                         HorizontalKnobMargin="3"
+                         HeightRequest="35"
+                         HorizontalKnobMargin="-1"
                          IsToggled="{Binding IsToggled, Source={RelativeSource AncestorType={x:Type ContentView}}}"
-                         KnobColor="Red"
-                         KnobHeight="36"
+                         KnobColor="White"
+                         KnobHeight="40"
                          KnobLimit="Boundary"
-                         KnobWidth="36"
+                         KnobWidth="42"
                          SwitchPanUpdate="CustomSwitch_SwitchPanUpdate"
                          Toggled="CustomSwitch_Toggled"
                          ToggledCommand="{Binding ToggledCommand, Source={RelativeSource AncestorType={x:Type ContentView}}}"
-                         WidthRequest="80">
+                         WidthRequest="90">
         <switch:CustomSwitch.StrokeShape>
             <RoundRectangle CornerRadius="20" />
         </switch:CustomSwitch.StrokeShape>
         <switch:CustomSwitch.KnobStrokeShape>
-            <RoundRectangle CornerRadius="18" />
+            <RoundRectangle CornerRadius="20" />
         </switch:CustomSwitch.KnobStrokeShape>
         <switch:CustomSwitch.BackgroundContent>
-            <Grid ColumnDefinitions="40,40"
-                  HeightRequest="40"
-                  WidthRequest="80">
+            <Grid ColumnDefinitions="45,45"
+                  HeightRequest="35"
+                  WidthRequest="90">
                 <Label Grid.Column="0"
                        FontAttributes="Bold"
                        FontAutoScalingEnabled="False"
                        FontSize="12"
                        HorizontalOptions="Center"
                        Text="ON"
-                       TextColor="DarkGray"
+                       TextColor="White"
                        VerticalTextAlignment="Center" />
                 <Label Grid.Column="1"
                        FontAttributes="Bold"
@@ -39,7 +39,7 @@
                        FontSize="12"
                        HorizontalOptions="Center"
                        Text="OFF"
-                       TextColor="DarkGray"
+                       TextColor="White"
                        VerticalTextAlignment="Center" />
             </Grid>
         </switch:CustomSwitch.BackgroundContent>
