--- a/Demo/App/Controls/CustomSwitchExamples/Other4Switch.xaml
+++ b/Demo/App/Controls/CustomSwitchExamples/Other4Switch.xaml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
-<ContentView x:Class="App.Examples.Other4Switch"
+<ContentView x:Class="App.Controls.CustomSwitchExamples.Other4Switch"
              xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:switch="clr-namespace:IeuanWalker.Maui.Switch;assembly=IeuanWalker.Maui.Switch">
