--- a/Demo/App/Pages/SwitchViewPage.xaml
+++ b/Demo/App/Pages/SwitchViewPage.xaml
@@ -3,7 +3,8 @@
              xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:controls="clr-namespace:App.Controls;assembly=App"
-             xmlns:examples="clr-namespace:App.Controls.CustomSwitchExamples;assembly=App"
+             xmlns:examples="clr-namespace:App.Controls.SwitchViewExamples;assembly=App"
+             xmlns:examples1="clr-namespace:App.Controls.CustomSwitchExamples;assembly=App"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:viewModel="clr-namespace:App.ViewModels;assembly=App"
              Title="Switch View Page"
@@ -33,20 +34,34 @@
                                Text="Enable toggle events: "
                                TextColor="DarkGray"
                                VerticalTextAlignment="Center" />
-                        <examples:IosSwitch Grid.Row="0"
-                                            Grid.Column="1"
-                                            IsToggled="{Binding EnableEvents}" />
+                        <examples1:IosSwitch Grid.Row="0"
+                                             Grid.Column="1"
+                                             IsToggled="{Binding EnableEvents}" />
                         <Label Grid.Row="1"
                                Grid.Column="0"
                                Text="Enable toggle commands: "
                                TextColor="DarkGray"
                                VerticalTextAlignment="Center" />
-                        <examples:IosSwitch Grid.Row="1"
-                                            Grid.Column="1"
-                                            IsToggled="{Binding EnableCommands}" />
+                        <examples1:IosSwitch Grid.Row="1"
+                                             Grid.Column="1"
+                                             IsToggled="{Binding EnableCommands}" />
                     </Grid>
                 </toolkit:Expander>
             </Border>
+
+            <Label Style="{StaticResource sectionHeading}" Text="Border switch" />
+            <examples:BorderSwitch Toggled="Switch_OnToggled" ToggledCommand="{Binding ToggledCommand}" />
+            <examples:BorderSwitch IsToggled="True"
+                                   Toggled="Switch_OnToggled"
+                                   ToggledCommand="{Binding ToggledCommand}" />
+
+            <Border Style="{StaticResource divider}" />
+            
+            <Label Style="{StaticResource sectionHeading}" Text="Image switch" />
+            <examples:ImageSwitch Toggled="Switch_OnToggled" ToggledCommand="{Binding ToggledCommand}" />
+            <examples:ImageSwitch IsToggled="True"
+                                  Toggled="Switch_OnToggled"
+                                  ToggledCommand="{Binding ToggledCommand}" />
         </VerticalStackLayout>
     </ScrollView>
 </ContentPage>
