--- a/Demo/App/Pages/AccessiblityTestPage.xaml
+++ b/Demo/App/Pages/AccessiblityTestPage.xaml
@@ -6,7 +6,7 @@
              xmlns:examples="clr-namespace:App.Controls.CustomSwitchExamples;assembly=App"
              Title="Accessiblity Test Page"
              Shell.NavBarIsVisible="False">
-    <ScrollView>
+    <ScrollView Padding="{StaticResource PagePadding}">
         <VerticalStackLayout>
             <controls:BackButton />
 
