--- a/Demo/App/Pages/AccessiblityTestPage.xaml
+++ b/Demo/App/Pages/AccessiblityTestPage.xaml
@@ -4,8 +4,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:controls="clr-namespace:App.Controls;assembly=App"
              xmlns:examples="clr-namespace:App.Controls.CustomSwitchExamples;assembly=App"
-             Title="Accessiblity Test Page"
-             Shell.NavBarIsVisible="False">
+             Title="Accessiblity Test Page">
     <ScrollView Padding="{StaticResource PagePadding}">
         <VerticalStackLayout>
             <controls:BackButton />
