--- a/Demo/App/Controls/CustomSwitchExamples/IosSwitch.xaml
+++ b/Demo/App/Controls/CustomSwitchExamples/IosSwitch.xaml
@@ -6,7 +6,7 @@
     <switch:CustomSwitch HeightRequest="40"
                          HorizontalKnobMargin="1"
                          IsToggled="{Binding IsToggled, Source={RelativeSource AncestorType={x:Type ContentView}}}"
-                         KnobColor="White"
+                         KnobBackgroundColor="White"
                          KnobHeight="36"
                          KnobLimit="Boundary"
                          KnobWidth="36"
