--- a/Demo/App/Controls/CustomSwitchExamples/Other3Switch.xaml
+++ b/Demo/App/Controls/CustomSwitchExamples/Other3Switch.xaml
@@ -7,7 +7,7 @@
                          HeightRequest="35"
                          HorizontalKnobMargin="-1"
                          IsToggled="{Binding IsToggled, Source={RelativeSource AncestorType={x:Type ContentView}}}"
-                         KnobColor="White"
+                         KnobBackgroundColor="White"
                          KnobHeight="40"
                          KnobLimit="Boundary"
                          KnobWidth="42"
