--- a/Demo/App/Controls/CustomSwitchExamples/Other4Switch.xaml
+++ b/Demo/App/Controls/CustomSwitchExamples/Other4Switch.xaml
@@ -6,7 +6,7 @@
     <switch:CustomSwitch BackgroundColor="#f3f3f2"
                          HeightRequest="50"
                          IsToggled="{Binding IsToggled, Source={RelativeSource AncestorType={x:Type ContentView}}}"
-                         KnobColor="White"
+                         KnobBackgroundColor="White"
                          KnobHeight="60"
                          KnobLimit="Boundary"
                          KnobWidth="60"
