--- a/Demo/App/Controls/CustomSwitchExamples/Other5Switch.xaml
+++ b/Demo/App/Controls/CustomSwitchExamples/Other5Switch.xaml
@@ -6,7 +6,7 @@
     <switch:CustomSwitch BackgroundColor="White"
                          HeightRequest="50"
                          IsToggled="{Binding IsToggled, Source={RelativeSource AncestorType={x:Type ContentView}}}"
-                         KnobColor="DeepPink"
+                         KnobBackgroundColor="DeepPink"
                          KnobHeight="60"
                          KnobLimit="Boundary"
                          KnobWidth="60"
