--- a/Demo/App/Controls/CustomSwitchExamples/Theme1Switch.xaml
+++ b/Demo/App/Controls/CustomSwitchExamples/Theme1Switch.xaml
@@ -6,7 +6,7 @@
     <switch:CustomSwitch BackgroundColor="White"
                          HeightRequest="50"
                          IsToggled="{Binding IsToggled, Source={RelativeSource AncestorType={x:Type ContentView}}}"
-                         KnobColor="Transparent"
+                         KnobBackgroundColor="Transparent"
                          KnobHeight="36"
                          KnobLimit="Boundary"
                          KnobWidth="45"
