--- a/Demo/App/Controls/CustomSwitchExamples/Theme2Switch.xaml
+++ b/Demo/App/Controls/CustomSwitchExamples/Theme2Switch.xaml
@@ -7,7 +7,7 @@
                          HeightRequest="40"
                          HorizontalKnobMargin="2"
                          IsToggled="{Binding IsToggled, Source={RelativeSource AncestorType={x:Type ContentView}}}"
-                         KnobColor="White"
+                         KnobBackgroundColor="White"
                          KnobHeight="36"
                          KnobLimit="Boundary"
                          KnobWidth="36"
