--- a/Scr/Switch/CustomSwitch.xaml
+++ b/Scr/Switch/CustomSwitch.xaml
@@ -28,7 +28,7 @@
             <Border x:Name="KnobFrame"
                     Padding="0"
                     Background="{Binding KnobBackground, Source={RelativeSource AncestorType={x:Type ContentView}}}"
-                    BackgroundColor="{Binding KnobColor, Source={RelativeSource AncestorType={x:Type ContentView}}}"
+                    BackgroundColor="{Binding KnobBackgroundColor, Source={RelativeSource AncestorType={x:Type ContentView}}}"
                     Content="{Binding KnobContent, Source={RelativeSource AncestorType={x:Type ContentView}}}"
                     HeightRequest="{Binding KnobHeight, Source={RelativeSource AncestorType={x:Type ContentView}}}"
                     HorizontalOptions="Center"
