Added pangesture test page

--- a/Demo/App/Resources/Styles/Styles.xaml
+++ b/Demo/App/Resources/Styles/Styles.xaml
@@ -23,11 +23,17 @@
         <Setter Property="HeightRequest" Value="1" />
     </Style>
     <Style x:Key="sectionHeading" TargetType="Label">
+        <Setter Property="FontSize" Value="Header" />
         <Setter Property="Padding" Value="5" />
         <Setter Property="HorizontalOptions" Value="CenterAndExpand" />
         <Setter Property="TextColor" Value="{DynamicResource TextPrimaryColour}" />
     </Style>
-
+    <Style x:Key="sectionSubHeading" TargetType="Label">
+        <Setter Property="FontSize" Value="Caption" />
+        <Setter Property="Padding" Value="5" />
+        <Setter Property="HorizontalOptions" Value="CenterAndExpand" />
+        <Setter Property="TextColor" Value="{DynamicResource TextPrimaryColour}" />
+    </Style>
     <Style x:Key="expander" TargetType="Border">
         <Setter Property="Padding" Value="10" />
         <Setter Property="BackgroundColor" Value="{DynamicResource SecondaryColour}" />
